--- a/Index.html
+++ b/Index.html
@@ -98,34 +98,66 @@
                     <div class="finish_round">
                         <img src="icons/finish/1.png" alt="1" class="finish_icon">
                     </div>
-                    <div class="finish_descr"></div>
+                    <div class="finish_descr">Создать свой сайт или блог</div>
                 </div>
                 <div class="finish_item">
                     <div class="finish_round">
                         <img src="icons/finish/2.png" alt="2" class="finish_icon">
                     </div>
-                    <div class="finish_descr"></div>
+                    <div class="finish_descr">Правильно его оптимизировать</div>
                 </div>
                 <div class="finish_item">
                     <div class="finish_round">
                         <img src="icons/finish/3.png" alt="3" class="finish_icon">
                     </div>
-                    <div class="finish_descr"></div>
+                    <div class="finish_descr">Обеспечить ему медленный, но верный рост в ТОП</div>
                 </div>
                 <div class="finish_item">
                     <div class="finish_round">
                         <img src="icons/finish/4.png" alt="4" class="finish_icon">
                     </div>
-                    <div class="finish_descr"></div>
+                    <div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
                 </div>
                 <div class="finish_item">
                     <div class="finish_round">
                         <img src="icons/finish/5.png" alt="5" class="finish_icon">
                     </div>
-                    <div class="finish_descr"></div>
+                    <div class="finish_descr">Получать ощутимую прибыль</div>
                 </div>
             </div>
         </div>
+    </section> 
+
+    <section class="bonus">
+        <div class="bonus_img">
+            <img src="/img/bonus.png" alt="bonus">
+        </div>
+        <div class="bonus_text">
+            Для всех участников интенсива предусмотрены бонусы и подарки. 
+            Нажимайте <br> на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по <br> окончании обучения!
+        </div>
+            <div class="bonus_button_div">
+                <button class="bonus_button">Записаться на интенсив!</button>
+            </div>
+    </section>
+
+    <section class="first_web">
+        <div class="web_img">
+            <img src="/img/web_logo.png" alt="logo">
+        </div>
+        <div class="web_title">Первый вебинар состоится:</div>
+        <div class="web_title_start">10 сентября в 20:00 по Москве</div>
+        <div class="web_title_finish">Успейте записаться, количество мест ограничено!</div>
+    </section>
+    
+
+    <section class="footer">
+        <div class="footer_links">
+            <a href="#" class="footer_sup">Служба поддержки</a>
+            <div class="drop">|</div>
+            <a href="#" class="footer_conf">Политика конфиденциальности</a>
+        </div>
+        <div class="call_number">Позвоните нам 8-800-555-01-21</div>
     </section>
 <script src="script.js"></script>
 </body>
